feat: lessons edit
